# team-picker

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  .secrets.baseline  DEPLOYMENT.md  DEVELOPMENT.md  Makefile  README.md  app.py  example.py  gunicorn.conf.py  models.py  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  services.py  student_list.txt  team_picker.py  team_picker_app.py
static/css/: styles.css
static/js/: app.js  config.js
templates/: 404.html  500.html  index.html
tests/: __init__.py  test_app.py  test_example.py  test_models.py  test_services.py  test_team_picker.py  test_team_picker_app.py
